Remove origins with zero engagement

When urls are removed from chrome://history, the site-engagement score
is not removed if it reaches zero. This CL fixes the issue as it is not
neccessary to keep a score of zero around.

Bug: 838875
Change-Id: Ia580ee49f2c4df8cda46f33c36b6551580dafef7
Reviewed-on: https://chromium-review.googlesource.com/1046765
Reviewed-by: calamity <calamity@chromium.org>
Commit-Queue: Christian Dullweber <dullweber@chromium.org>
Cr-Commit-Position: refs/heads/master@{#556740}