chrome/browser/engagement/site_engagement_service_unittest.cc
@@ -1135,6 +1135,7 @@ TEST_F(SiteEngagementServiceTest, CleanupOriginsOnHistoryDeletion) {
   AssertInRange(5.0, service_->GetScore(origin2));
   AssertInRange(5.0, service_->GetScore(origin3));
   AssertInRange(5.0, service_->GetScore(origin4));
+  EXPECT_EQ(4U, service_->GetAllDetails().size());
 
   {
     SiteEngagementChangeWaiter waiter(profile());
@@ -1155,6 +1156,7 @@ TEST_F(SiteEngagementServiceTest, CleanupOriginsOnHistoryDeletion) {
     AssertInRange(5.0, service_->GetScore(origin3));
     AssertInRange(2.5, service_->GetScore(origin4));
     AssertInRange(9.5, service_->GetTotalEngagementPoints());
+    EXPECT_EQ(3U, service_->GetAllDetails().size());
   }
 
   {
@@ -1178,6 +1180,7 @@ TEST_F(SiteEngagementServiceTest, CleanupOriginsOnHistoryDeletion) {
     AssertInRange(5.0, service_->GetScore(origin3));
     AssertInRange(2.5, service_->GetScore(origin4));
     AssertInRange(8.5, service_->GetTotalEngagementPoints());
+    EXPECT_EQ(3U, service_->GetAllDetails().size());
   }
 
   {
@@ -1200,6 +1203,7 @@ TEST_F(SiteEngagementServiceTest, CleanupOriginsOnHistoryDeletion) {
     AssertInRange(5.0, service_->GetScore(origin3));
     AssertInRange(2.5, service_->GetScore(origin4));
     AssertInRange(7.5, service_->GetTotalEngagementPoints());
+    EXPECT_EQ(2U, service_->GetAllDetails().size());
   }
 }
 
